[tool.poetry]
name = "ai-image-generation"
version = "0.1.0"
description = "AI image generation and manipulation project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
absl-py = "2.0.0"
accelerate = ">=0.23.0"
addict = "2.4.0"
aiofiles = "23.2.1"
aiohttp = "3.8.6"
aiosignal = "1.3.1"
albumentations = "1.3.1"
aliyun-python-sdk-core = "2.14.0"
aliyun-python-sdk-kms = "2.16.2"
altair = "5.1.2"
annotated-types = "0.6.0"
anyio = "3.7.1"
appdirs = "1.4.4"
asttokens = "2.4.1"
astunparse = "1.6.3"
async-timeout = "4.0.3"
attrs = "23.1.0"
bitsandbytes = "0.42.0"
blessed = "1.20.0"
Brotli = "1.0.9"
certifi = "2023.07.22"
cffi = "1.15.1"
chardet = "5.2.0"
charset-normalizer = "2.0.4"
click = "8.1.7"
colorama = "0.4.6"
coloredlogs = "15.0.1"
contourpy = "1.1.1"
controlnet-aux = ">=0.0.7"
crcmod = "1.7"
cryptography = "41.0.3"
cycler = "0.12.1"
Cython = "3.0.7"
datasets = "2.13.0"
debugpy = "1.8.1"
diffusers = "0.23.0"
dill = "0.3.6"
dlib = "19.24.2"
docker-pycreds = "0.4.0"
easydict = "1.11"
edge-tts = "6.1.9"
einops = "0.7.0"
exceptiongroup = "1.1.3"
fastapi = "0.104.1"
fastjsonschema = "2.19.0"
ffmpy = "0.3.1"
filelock = "3.9.0"
flatbuffers = "23.5.26"
fonttools = "4.44.0"
frozenlist = "1.4.0"
fsspec = "2023.9.2"
ftfy = "6.1.3"
gast = "0.5.4"
gitdb = "4.0.11"
GitPython = "3.1.40"
gmpy2 = "2.1.2"
gpustat = "1.1.1"
gradio = "4.16.0"
gradio_client = "0.8.1"
h11 = "0.14.0"
httpcore = "1.0.1"
httpx = "0.25.1"
huggingface-hub = "0.20.3"
humanfriendly = "10.0"
idna = "3.4"
imageio = "2.31.6"
importlib-metadata = "6.8.0"
importlib-resources = "6.1.0"
iniconfig = "2.0.0"
insightface = "0.7.3"
Jinja2 = "3.1.2"
jmespath = "0.10.0"
joblib = "1.3.2"
jsonschema = "4.19.2"
jsonschema-specifications = "2023.7.1"
jupyter_core = "5.5.0"
jupytext = "1.15.2"
kiwisolver = "1.4.5"
lazy_loader = "0.3"
Markdown = "3.5.1"
markdown-it-py = "3.0.0"
MarkupSafe = "2.1.1"
matplotlib = "3.7.3"
mdit-py-plugins = "0.4.0"
mdurl = "0.1.2"
mediapipe = "0.10.7"
mmcv-full = "1.7.0"
mmdet = "2.26.0"
mmengine = "0.9.1"
model-index = "0.1.11"
modelscope = "1.9.4"
mpmath = "1.3.0"
multidict = "6.0.4"
multiprocess = "0.70.14"
mypy-extensions = "1.0.0"
nbformat = "5.9.2"
networkx = "3.1"
ninja = "1.11.1.1"
numpy = ">=1.24.3,<2.0"
nvidia-ml-py = "12.535.133"
onnx = "1.15.0"
onnxruntime = "1.16.1"
openai-clip = "1.0.1"
opencv-contrib-python = "4.8.1.78"
opencv-python = "4.8.1.78"
opencv-python-headless = "4.8.1.78"
opendatalab = "0.0.10"
openmim = "0.3.9"
openxlab = "0.0.28"
ordered-set = "4.1.0"
orjson = "3.9.10"
oss2 = "2.17.0"
packaging = "23.2"
pandas = "2.0.3"
Pillow = "10.0.1"
pkgutil_resolve_name = "1.3.10"
platformdirs = "3.11.0"
pluggy = "1.3.0"
prettytable = "3.9.0"
protobuf = "3.20.3"
psutil = "5.9.0"
pyarrow = "14.0.0"
pycocotools = "2.0.7"
pycparser = "2.21"
pycryptodome = "3.19.0"
pydantic = "2.4.2"
pydantic_core = "2.10.1"
pydub = "0.25.1"
Pygments = "2.16.1"
pyOpenSSL = "23.2.0"
pyparsing = "3.1.1"
pyre-extensions = "0.0.29"
PySocks = "1.7.1"
python-dateutil = "2.8.2"
python-multipart = "0.0.6"
python-slugify = "8.0.1"
pytz = "2023.3.post1"
PyWavelets = "1.4.1"
PyYAML = "6.0.1"
qudida = "0.0.4"
referencing = "0.30.2"
regex = "2023.10.3"
reportlab = "4.0.8"
requests = "2.28.2"
rich = "13.4.2"
rpds-py = "0.12.0"
ruff = "0.1.15"
safetensors = "0.4.0"
saliency = "0.2.0"
scikit-image = "0.21.0"
scikit-learn = "1.3.2"
scipy = "1.10.1"
semantic-version = "2.10.0"
sentencepiece = "0.1.99"
sentry-sdk = "1.39.1"
setproctitle = "1.3.3"
setuptools = "60.2.0"
shapely = "2.0.2"
shellingham = "1.5.4"
simplejson = "3.19.2"
six = "1.16.0"
smmap = "5.0.1"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
sounddevice = "0.4.6"
spaces = "0.22.0"
starlette = "0.27.0"
sympy = "1.11.1"
tabulate = "0.9.0"
termcolor = "2.3.0"
terminaltables = "3.1.10"
text-unidecode = "1.3"
threadpoolctl = "3.2.0"
tifffile = "2023.7.10"
tiktoken = "0.5.2"
timm = ">=0.9.10"
tokenizers = "0.13.3"
toml = "0.10.2"
tomli = "2.0.1"
tomlkit = "0.12.0"
toolz = "0.12.0"
torch = "2.0.0"
torchaudio = "2.0.0"
torchsummary = "1.5.1"
torchvision = ">=0.15.0"
tqdm = "4.65.2"
traitlets = "5.13.0"
transformers = "4.31.0"
transformers-stream-generator = "0.0.4"
triton = "2.0.0"
typer = "0.9.0"
typing_extensions = "4.8.0"
typing-inspect = "0.9.0"
tzdata = "2023.3"
urllib3 = "1.26.18"
uvicorn = "0.24.0"
wandb = "0.16.1"
wcwidth = "0.2.12"
websockets = "11.0.3"
wheel = "0.41.2"
xformers = "0.0.19"
xxhash = "3.4.1"
yapf = "0.40.2"
yarl = "1.9.2"
zipp = "3.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
test = "pytest"
tests = "pytest"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=.",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/virtualenv/*",
    "*/.venv/*",
    "*/dist/*",
    "*/build/*",
    "*.egg-info/*",
    "*/migrations/*",
    "*/__init__.py",
    "*/conftest.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"